--- a/src/assets/_variables.sass
+++ b/src/assets/_variables.sass
@@ -1,3 +1,10 @@
+// Various colors
+$body-background: #141414
+$search-text: #eeeeee
+$search-background: #333333
+
+
+// Item colors
 $unarmed: #FFF6C6
 $light_melee: #A4EAB8
 $one-handed: #73AFEF
